--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav ul li a:hover {
 .main {
     height: 427px;
     width: 100%;
-    background-image: url('./image/bac2.webp');
+    background-image: url('./image/bac2.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
